--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,24 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title></title>
+    <title>Excel course</title>
   </head>
-  <body></body>
+  <body>
+    <div id="app" class="container">
+      <div class="excel">
+        <div class="excel__header">
+
+        </div>
+        <div class="excel__toolbar">
+
+        </div>
+        <div class="excel__formula">
+
+        </div>
+        <div class="excel__table">
+          
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
